# evangelist

./: .gitignore  AI_COMMIT_README.md  Dockerfile  LICENSE  README.md  agnosterzak.zsh-theme  ai-commit.py  anacrontab  apt.requirements.txt  bashrc  custom.js  difff-1.0-1.deb  difff-1.1-1.deb  difff-1.2-1.deb  difff-1.2.1-2.deb  dummy-install.sh  evangelist.macos.zsh  evangelist.sh  inputrc  notebook.json  pip.requirements.txt  print-functions.sh  sh.vim  sudo.builder.macos.sh  sudo.builder.macos.zsh  sudo.builder.sh  tmux.conf  vimrc  vimrc.remote  xport-list.seed  ycm_extra_conf.py  zsh-install.sh  zshenv  zshrc
_impl/: backup.sh  bak-keys.sh  control-functions.sh  control.sh  install-functions.sh  install.bash3  install.bash4  install.sh  print-write.sh  utils.sh  write.sh  xport.sh
_impl/completions/: _evangelist  evn-compl.bash
ai-traits/: README.md  ai-commit.py  pyproject.toml
anacron/: anacron.sh  anacrontab.alive  anacrontab.young  dead-killer.sh  purgeVimUndo.sh
bash/: aliases-functions.sh  bashrc  inputrc  ps1.bash
completions/: _evangelist  evn-compl.bash
conf/ai/: .gitignore  README.md  install.sh
conf/autoenv/: common.sh  conda.sh  venv.sh
conf/bash/: bashrc  (+5 more)
custom/: template.custom.zsh
docs/: hammerspoon-macos-global-hotkeys-log.txt  kitty-macos-command-meta-log.txt
jupyter/: notebook.json
legacy/: bash-install.sh  coc.vim  vimrc  vimrc.remote  zsh-install.sh  zshrc
nvim/: init.vim
scripts/: mason-reinstall.sh
tmux/: tmux.conf
zsh/: agnosterzak.zsh-theme  conda-autoenv.sh  conda_autoenv.sh  extra.zsh  macos.zsh  zshenv  zshrc
(+216 files in other folders)
