[project]
name = "ai-traits"
version = "0.1.0"
description = "Collection of AI-driven developer tools including AI-Commit for generating commit messages"
authors = [{ name = "lukoshkin" }]
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Version Control :: Git",
]
dependencies = ["click>=8.2.1", "litellm>=1.70.4", "loguru>=0.7.3"]

[project.urls]
"Homepage" = "https://github.com/username/ai-traits"
"Bug Tracker" = "https://github.com/username/ai-traits/issues"

[project.scripts]
ai-commit = "ai_traits.ai_commit:cli"

[tool.setuptools]
packages = ["ai_traits"]

[tool.setuptools.package-data]
ai_traits = ["*.py"]

[tool.ruff]
line-length = 79
target-version = "py39"
select = ["E", "F", "I"]
